[gd_scene load_steps=4 format=3 uid="uid://1pluyccmlmvm"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_xtce8"]
[ext_resource type="AudioStream" uid="uid://cl3js7w50sov" path="res://assets/sounds/death1.mp3" id="2_g7bmu"]
[ext_resource type="AudioStream" uid="uid://bnpgi47bfl3fv" path="res://assets/sounds/death2.mp3" id="3_ua24t"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_xtce8")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="SFX1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_g7bmu")
volume_db = -20.0
bus = &"SFX"

[node name="SFX2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ua24t")
volume_db = -20.0
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
